# fastapi-react-docker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  example.env  nginx.conf  pyproject.toml  requirements.txt
backend/: alembic.ini  pytest.ini
backend/app/: config.py  db.py  db_request.py  graphql.py  main.py  models.py  schema.py  server.py  types.py  worker.py
backend/app/crud/: repo.py
backend/app/models/: __init__.py  base.py  broker.py  portfolio.py
backend/app/routes/: __init__.py  brokers.py  portfolios.py  tasks.py
backend/app/tests/: conftest.py  test_api.py  test_main.py  utils.py
backend/migrations/: env.py  script.py.mako
frontend/: .dockerignore  README.MD  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  config.ts  meta.json
frontend/src/components/layout/sider/: index.tsx
frontend/src/interfaces/: index.d.ts
frontend/src/lib/graphql/: index.ts
frontend/src/pages/: index.tsx
frontend/src/pages/broker/: create.tsx  edit.tsx  list.tsx  show.tsx
frontend/src/pages/portfolio/: create.tsx  edit.tsx  list.tsx  show.tsx
frontend/src/styles/: antd.less
