[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = "FastAPI, Docker and Co"
authors = ["Sherevv <blog@sherevv.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.7.7"
fastapi = "^0.75.2"
SQLAlchemy = "^1.4.35"
sqlmodel = "^0.0.6"
asyncpg = "^0.25.0"
strawberry-graphql = {extras = ["fastapi"], version = "^0.111.2"}
uvicorn = "^0.17.6"
celery = "^5.2.6"
flower = "^1.0.0"
redis = "^4.2.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
